@@ -1,3 +1,12 @@
+2000-06-22  Bruno Haible  <haible@clisp.cons.org>
+
+        * include/cl_object.h: Rename cl_word_size to cl_pointer_size.
+        * include/cl_types.h (HAVE_FAST_LONGLONG): Also define on Irix6
+          with N32 ABI.
+          (cl_word_size): New macro.
+        * src/float/sfloat/cl_SF.h: Use cl_pointer_size instead of
+          cl_word_size.
+
 2000-06-05  Richard Kreckel  <kreckel@ginac.de>
 
         * doc/*, INSTALL: Mention that both shared and static library are
